fix editor display on IE

--- a/app/components/editor/editor.less
+++ b/app/components/editor/editor.less
@@ -145,7 +145,7 @@
   width: auto;
   position: relative;
   height: 100%;
-  width: 100%;
+  width: auto;
   z-index: 10;
   overflow: hidden;
 }
